--- a/src/views/sandbox/index.module.scss
+++ b/src/views/sandbox/index.module.scss
@@ -1,3 +1,34 @@
-.SandBox{
-  
+.SandBox {
+  width: 100vw;
+  height: 100vh;
+  .trigger {
+    margin-right: 16px;
+    font-size: 18px;
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+
+  .trigger:hover {
+    color: #1890ff;
+  }
+
+  .logo {
+    height: 32px;
+    margin: 16px;
+    background: rgba(255, 255, 255, 0.3);
+  }
+  .TopHeader {
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 16px;
+    .Avatar{
+      cursor: pointer;
+    }
+  }
+  .SiteLayout .SiteLayoutBackground {
+    background: #fff;
+  }
 }
